fix one-clas svm bug

--- a/experiments/Outlier Detection/Result_analysis.ipynb
+++ b/experiments/Outlier Detection/Result_analysis.ipynb
@@ -1090,7 +1090,7 @@
     "fractions = np.arange(0.01,0.7,0.02)\n",
     "y_preds = []\n",
     "for fraction in fractions:\n",
-    "    model = OneClassSVM(nu=fraction,gamma='auto')\n",
+    "    model = OneClassSVM(nu=fraction)\n",
     "    model.fit(x)\n",
     "    y_pred = model.predict(x)\n",
     "    y_preds.append(y_pred)"
